[gd_scene load_steps=39 format=3 uid="uid://cxa5348c0w03t"]

[ext_resource type="Texture2D" uid="uid://cjb73ied6rmjw" path="res://Resources/Blue Units/Warrior/Warrior_Idle.png" id="1_6xdwp"]
[ext_resource type="Script" uid="uid://ddsjmq6y2nhcr" path="res://Scripts/player.gd" id="1_j341n"]
[ext_resource type="Texture2D" uid="uid://lk7msiunc1wd" path="res://Resources/Blue Units/Warrior/Warrior_Attack1.png" id="2_bqsbk"]
[ext_resource type="Texture2D" uid="uid://bduk2i11dbgkn" path="res://Resources/Blue Units/Warrior/Warrior_Run.png" id="3_cue0d"]
[ext_resource type="Script" uid="uid://dqld6hccodqpj" path="res://Scripts/health_bar.gd" id="5_xf5fp"]
[ext_resource type="Script" uid="uid://dgxnvijrw8r2o" path="res://Characters/Player/quest_log.gd" id="6_osktb"]
[ext_resource type="Texture2D" uid="uid://dqfnfsrebb4hw" path="res://Resources/RetroInventory/Inventory_Example_03.png" id="7_klx3t"]
[ext_resource type="Script" uid="uid://dg67jtjvan2d6" path="res://Scripts/inventory.gd" id="7_r5ew0"]
[ext_resource type="Texture2D" uid="uid://ynq8nrtsuhoq" path="res://Resources/RetroInventory/Inventory_9Slices.png" id="9_yhol4"]
[ext_resource type="Texture2D" uid="uid://b73ohxo54h5rd" path="res://Resources/RetroInventory/inventory_1x5.png" id="10_yhol4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5elsd"]
atlas = ExtResource("2_bqsbk")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_blwrb"]
atlas = ExtResource("2_bqsbk")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvtal"]
atlas = ExtResource("2_bqsbk")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fwmd"]
atlas = ExtResource("2_bqsbk")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cue0d"]
atlas = ExtResource("1_6xdwp")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqsbk"]
atlas = ExtResource("1_6xdwp")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf5fp"]
atlas = ExtResource("1_6xdwp")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_osktb"]
atlas = ExtResource("1_6xdwp")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vev3"]
atlas = ExtResource("1_6xdwp")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_klx3t"]
atlas = ExtResource("1_6xdwp")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ew0"]
atlas = ExtResource("1_6xdwp")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhol4"]
atlas = ExtResource("1_6xdwp")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_va6lm"]
atlas = ExtResource("3_cue0d")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2wkb"]
atlas = ExtResource("3_cue0d")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b71o8"]
atlas = ExtResource("3_cue0d")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x58m1"]
atlas = ExtResource("3_cue0d")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6jp0"]
atlas = ExtResource("3_cue0d")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k5s7"]
atlas = ExtResource("3_cue0d")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_va6lm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5elsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blwrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvtal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fwmd")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cue0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqsbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf5fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osktb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vev3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klx3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ew0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhol4")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_va6lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2wkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b71o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x58m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6jp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k5s7")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xf5fp"]
radius = 8.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6xdwp"]
radius = 18.0
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bqsbk"]
size = Vector2(45, 103)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_osktb"]
bg_color = Color(0, 0.631222, 0.178616, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xf5fp"]
font_size = 32
font_color = Color(1, 1, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqsbk"]
bg_color = Color(0.699363, 0, 0.168303, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bqsbk"]
font_size = 80
font_color = Color(0.719454, 2.55093e-06, 5.77569e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf5fp"]
bg_color = Color(0.0755004, 0.427178, 0.551769, 1)

[sub_resource type="LabelSettings" id="LabelSettings_osktb"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_as_relative = false
y_sort_enabled = true
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_j341n")
speed = 200

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_va6lm")
animation = &"Attack"

[node name="EnvironmentHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_xf5fp")

[node name="HitboxArea" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("CapsuleShape2D_6xdwp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="AttackHitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(45, 7.5)
shape = SubResource("RectangleShape2D_bqsbk")
disabled = true

[node name="FlyingTextNode" type="Node2D" parent="."]
z_index = 1

[node name="AttackTimer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StaminaBar" type="ProgressBar" parent="Control"]
visible = false
layout_mode = 0
offset_left = -40.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = -56.0
theme_override_styles/fill = SubResource("StyleBoxFlat_osktb")
value = 100.0
show_percentage = false

[node name="LevelUpLabel" type="Label" parent="Control/StaminaBar"]
visible = false
layout_mode = 0
offset_left = -32.0
offset_top = -48.0
offset_right = 109.0
offset_bottom = -3.0
text = "Level Up!"
label_settings = SubResource("LabelSettings_xf5fp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 35.0
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_bqsbk")
rounded = true
show_percentage = false
script = ExtResource("5_xf5fp")

[node name="HealthLabel" type="Label" parent="CanvasLayer/HealthBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="DeathControl" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 403.5
offset_top = 269.0
offset_right = 443.5
offset_bottom = 309.0

[node name="Label" type="Label" parent="CanvasLayer/DeathControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 325.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
text = "You Died"
label_settings = SubResource("LabelSettings_bqsbk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RespawnButton" type="Button" parent="CanvasLayer/DeathControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 48.5
offset_top = 87.0
offset_right = 264.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
text = "RESPAWN"

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -376.0
offset_top = -16.0
offset_right = 374.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_xf5fp")
rounded = true
show_percentage = false

[node name="LevelLabel" type="Label" parent="CanvasLayer/ExpBar"]
layout_mode = 0
offset_left = -48.0
offset_top = -8.0
offset_right = -8.0
offset_bottom = 15.0
text = "Lv 99"
label_settings = SubResource("LabelSettings_osktb")
horizontal_alignment = 2

[node name="QuestLog" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -132.0
offset_right = 75.0
offset_bottom = 184.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.75, 0.75)
script = ExtResource("6_osktb")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/QuestLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quests" type="VBoxContainer" parent="CanvasLayer/QuestLog/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Inventory" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 408.0
offset_top = 156.0
offset_right = 448.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_r5ew0")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Inventory"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)
texture = ExtResource("7_klx3t")

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Inventory"]
layout_mode = 2
offset_left = 17.0
offset_top = 18.0
offset_right = 145.0
offset_bottom = 176.0
theme_override_constants/h_separation = 46
theme_override_constants/v_separation = 46
columns = 3

[node name="InventorySlot1" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot1"]
visible = false
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot1"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot2" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot2"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot2"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot3" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot3"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot3"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot4" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot4"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot4"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot5" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot5"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot5"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot6" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot6"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot6"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot7" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot7"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot7"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot8" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot8"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot8"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="InventorySlot9" type="Control" parent="CanvasLayer/Inventory/GridContainer"]
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot9"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_yhol4")

[node name="Item" type="TextureRect" parent="CanvasLayer/Inventory/GridContainer/InventorySlot9"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="Hotbar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -104.0
offset_right = -56.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Hotbar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 1.75)
texture = ExtResource("10_yhol4")

[connection signal="animation_finished" from="Sprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/DeathControl/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot1" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [0]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot1" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [0]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot1" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [0]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot2" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [1]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot2" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [1]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot2" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [1]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot3" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [2]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot3" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [2]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot3" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [2]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot4" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [3]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot4" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [3]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot4" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [3]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot5" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [4]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot5" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [4]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot5" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [4]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot6" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [5]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot6" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [5]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot6" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [5]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot7" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [6]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot7" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [6]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot7" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [6]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot8" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [7]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot8" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [7]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot8" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [7]]
[connection signal="gui_input" from="CanvasLayer/Inventory/GridContainer/InventorySlot9" to="CanvasLayer/Inventory" method="_on_inventory_slot_gui_input" binds= [8]]
[connection signal="mouse_entered" from="CanvasLayer/Inventory/GridContainer/InventorySlot9" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_entered" binds= [8]]
[connection signal="mouse_exited" from="CanvasLayer/Inventory/GridContainer/InventorySlot9" to="CanvasLayer/Inventory" method="_on_inventory_slot_mouse_exited" binds= [8]]
